--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JobsVault.</title>
+    <title>JobsVault</title>
   </head>
   <body>
     <div id="root"></div>
